@@ -1,0 +1,12 @@
+using System;
+using System.IO;
+
+public class Test {
+
+        public static int Main () {
+                IntPtr ip = (IntPtr)1;
+
+                return 0;
+        }
+}
+
